chore(config): improve lint
